# closure-pass

./: Cargo.toml  README.md
examples/: sample.rs
src/: lib.rs
