[package]
name = "closure-pass"
description = "Proc-macro for specifying kind of passing variables to closures"
version = "0.1.0"
authors = ["Kitsu <mail@kitsu.me>"]
license = "MIT OR Apache-2.0"
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.18", features = ["full"] }
quote = "1.0.4"
